package service

import (
	"context"
	"fmt"

	pb "legal-ai-services/api/legal/v1"

	"github.com/go-kratos/kratos/v2/log"
	"google.golang.org/protobuf/types/known/timestamppb"
)

// LegalService implements the legal analysis gRPC service
type LegalService struct {
	pb.UnimplementedLegalAnalysisServiceServer
	logger log.Logger
}

// NewLegalService creates a new legal service instance
func NewLegalService(logger log.Logger) *LegalService {
	return &LegalService{
		logger: logger,
	}
}

// AnalyzeDocument analyzes a legal document and returns key findings
func (s *LegalService) AnalyzeDocument(ctx context.Context, req *pb.AnalyzeDocumentRequest) (*pb.AnalyzeDocumentResponse, error) {
	s.logger.Log(log.LevelInfo, "msg", "Analyzing document", "document_id", req.DocumentId)

	// Mock analysis - in production this would use AI/ML services
	response := &pb.AnalyzeDocumentResponse{
		AnalysisId:  fmt.Sprintf("analysis_%s", req.DocumentId),
		Summary:     fmt.Sprintf("Analysis of %s document: %s", req.DocumentType, req.DocumentId),
		KeyFindings: []string{
			"Document contains legal terms requiring review",
			"Compliance requirements identified",
			"Risk assessment completed",
		},
		Entities: []*pb.Entity{
			{
				Type:        "PERSON",
				Value:       "John Doe",
				Confidence:  0.95,
				StartOffset: 100,
				EndOffset:   108,
			},
			{
				Type:        "ORGANIZATION",
				Value:       "Legal Corp",
				Confidence:  0.88,
				StartOffset: 200,
				EndOffset:   210,
			},
		},
		ConfidenceScore: 0.92,
		CreatedAt:       timestamppb.Now(),
	}

	return response, nil
}

// ProcessDocumentStream processes a document stream for real-time analysis
func (s *LegalService) ProcessDocumentStream(ctx context.Context, req *pb.ProcessDocumentStreamRequest) (*pb.ProcessDocumentStreamResponse, error) {
	s.logger.Log(log.LevelInfo, "msg", "Processing document stream", "bytes", len(req.Data))

	// Mock processing - in production this would handle actual document processing
	result := []byte(fmt.Sprintf("Processed %d bytes of %s format", len(req.Data), req.Format))

	return &pb.ProcessDocumentStreamResponse{
		Result: result,
		Status: "completed",
	}, nil
}

// VectorService implements the vector search gRPC service
type VectorService struct {
	pb.UnimplementedVectorSearchServiceServer
	logger log.Logger
}

// NewVectorService creates a new vector service instance
func NewVectorService(logger log.Logger) *VectorService {
	return &VectorService{
		logger: logger,
	}
}

// SearchSimilar performs vector similarity search
func (s *VectorService) SearchSimilar(ctx context.Context, req *pb.SearchSimilarRequest) (*pb.SearchSimilarResponse, error) {
	s.logger.Log(log.LevelInfo, "msg", "Vector search", "query", req.Query)

	// Mock search results - in production this would query vector database
	results := []*pb.VectorSearchResult{
		{
			DocumentId:      "doc1",
			Content:         "Sample legal document 1",
			SimilarityScore: 0.95,
			Metadata: map[string]string{
				"type":   "contract",
				"status": "active",
			},
		},
		{
			DocumentId:      "doc2",
			Content:         "Sample legal document 2",
			SimilarityScore: 0.87,
			Metadata: map[string]string{
				"type":   "agreement",
				"status": "pending",
			},
		},
	}

	return &pb.SearchSimilarResponse{
		Results: results,
	}, nil
}
