/**
 * GPU Processing API Endpoint
 * Handles document processing requests and orchestrates Go SIMD + Node.js GPU services
 */

import { json } from '@sveltejs/kit';
import type { RequestHandler } from './$types';

// gRPC client setup (simplified for demo)
interface ProcessingRequest {
  documentId: string;
  content: string;
  options?: {
    processType: 'embeddings' | 'clustering' | 'similarity' | 'boost' | 'full';
    priority: number;
    timeout: number;
    retries: number;
    batchSize: number;
  };
}

interface ProcessingResponse {
  documentId: string;
  success: boolean;
  processingTime: number;
  embeddings?: number[][];
  clusters?: number[];
  similarities?: number[];
  boostTransforms?: number[][];
  metadata: Record<string, any>;
  error?: string;
}

// Mock gRPC client functions (replace with actual gRPC implementations)
async function callGoSimdService(request: ProcessingRequest): Promise<any> {
  // Simulate Go SIMD service call
  await new Promise(resolve => setTimeout(resolve, 100 + Math.random() * 500));
  
  return {
    documentId: request.documentId,
    processingTime: 150 + Math.random() * 300,
    success: true,
    metadata: {
      service: 'go-simd',
      chunksProcessed: Math.floor(request.content.length / 512) + 1,
      simdOptimized: true
    }
  };
}

async function callNodeGpuService(documentId: string, data: any): Promise<any> {
  // Simulate Node.js GPU service call
  await new Promise(resolve => setTimeout(resolve, 200 + Math.random() * 800));
  
  const dimensions = 384;
  const numChunks = data.metadata.chunksProcessed;
  
  return {
    documentId,
    embeddings: Array.from({ length: numChunks }, () => 
      Array.from({ length: dimensions }, () => Math.random() * 2 - 1)
    ),
    clusters: Array.from({ length: numChunks }, () => Math.floor(Math.random() * 8)),
    similarities: Array.from({ length: Math.min(numChunks * (numChunks - 1) / 2, 10) }, () => Math.random()),
    boostTransforms: Array.from({ length: numChunks }, () =>
      Array.from({ length: dimensions }, () => Math.random() * 2 - 1)
    ),
    processingTime: 200 + Math.random() * 600,
    metadata: {
      service: 'node-gpu',
      gpuAccelerated: true,
      shaderUsed: 'embedding_processor',
      dimensions
    }
  };
}

export const POST: RequestHandler = async ({ request }) => {
  const startTime = Date.now();

  try {
    const requestData: ProcessingRequest = await request.json();
    
    // Validate request
    if (!requestData.documentId || !requestData.content) {
      return json({
        error: 'Missing required fields: documentId and content',
        success: false
      }, { status: 400 });
    }

    const {
      documentId,
      content,
      options = {
        processType: 'full',
        priority: 5,
        timeout: 30000,
        retries: 3,
        batchSize: 1
      }
    } = requestData;

    console.log(`🎮 Processing document: ${documentId} (${content.length} chars, type: ${options.processType})`);

    // Step 1: Send to Go SIMD service for parsing and chunking
    console.log('📤 Sending to Go SIMD service...');
    const goResult = await callGoSimdService(requestData);
    
    if (!goResult.success) {
      throw new Error(`Go SIMD service failed: ${goResult.error || 'Unknown error'}`);
    }

    // Step 2: Send processed data to Node.js GPU service
    console.log('🎯 Sending to Node.js GPU service...');
    const gpuResult = await callNodeGpuService(documentId, goResult);

    // Step 3: Combine results
    const totalProcessingTime = Date.now() - startTime;
    
    const response: ProcessingResponse = {
      documentId,
      success: true,
      processingTime: totalProcessingTime,
      embeddings: gpuResult.embeddings,
      clusters: gpuResult.clusters,
      similarities: gpuResult.similarities,
      boostTransforms: gpuResult.boostTransforms,
      metadata: {
        ...goResult.metadata,
        ...gpuResult.metadata,
        totalProcessingTime,
        pipeline: ['go-simd', 'node-gpu'],
        timestamp: new Date().toISOString(),
        requestOptions: options
      }
    };

    console.log(`✅ Processing completed for ${documentId} in ${totalProcessingTime}ms`);
    
    return json(response);

  } catch (error) {
    const processingTime = Date.now() - startTime;
    const errorMessage = error instanceof Error ? error.message : 'Unknown error';
    
    console.error(`❌ Processing failed after ${processingTime}ms:`, errorMessage);
    
    return json({
      success: false,
      processingTime,
      error: errorMessage,
      metadata: {
        timestamp: new Date().toISOString(),
        processingTime
      }
    }, { status: 500 });
  }
};

export const GET: RequestHandler = async () => {
  // Health check endpoint
  try {
    // Check if services are available (simplified)
    const healthStatus = {
      status: 'healthy',
      services: {
        'go-simd': 'healthy',
        'node-gpu': 'healthy'
      },
      timestamp: new Date().toISOString(),
      uptime: process.uptime()
    };
    
    return json(healthStatus);
  } catch (error) {
    return json({
      status: 'unhealthy',
      error: error instanceof Error ? error.message : 'Unknown error',
      timestamp: new Date().toISOString()
    }, { status: 503 });
  }
};