/**
 * Production Service Registry - Central mapping of all 37 Go binaries
 * Integrates with Context7 multicore orchestration and GPU error processing
 */

export interface ServiceDefinition {
  name: string;
  binary: string;
  port: number;
  protocols: ('http' | 'grpc' | 'quic' | 'websocket')[];
  tier: 'tier1' | 'tier2' | 'tier3' | 'tier4';
  category: 'ai_rag' | 'file_upload' | 'xstate_orchestration' | 'protocol' | 'infrastructure';
  healthEndpoint: string;
  description: string;
  dependencies?: string[];
  startupOrder: number;
}

export interface ProtocolTierConfig {
  tier: 'ultra_fast' | 'high_perf' | 'standard' | 'realtime';
  protocol: 'quic' | 'grpc' | 'http' | 'websocket';
  latencyTarget: string;
  useCase: string;
}

export const PROTOCOL_TIERS: Record<string, ProtocolTierConfig> = {
  ULTRA_FAST: { tier: 'ultra_fast', protocol: 'quic', latencyTarget: '< 5ms', useCase: 'RAG queries, state events' },
  HIGH_PERF: { tier: 'high_perf', protocol: 'grpc', latencyTarget: '< 15ms', useCase: 'Legal processing, AI inference' },
  STANDARD: { tier: 'standard', protocol: 'http', latencyTarget: '< 50ms', useCase: 'File uploads, general APIs' },
  REALTIME: { tier: 'realtime', protocol: 'websocket', latencyTarget: '< 1ms', useCase: 'Live events, streaming' }
};

export const GO_SERVICES_REGISTRY: Record<string, ServiceDefinition> = {
  // TIER 1: Core Services (Must Start First)
  'enhanced-rag': {
    name: 'Enhanced RAG Engine',
    binary: 'enhanced-rag.exe',
    port: 8094,
    protocols: ['http', 'websocket'],
    tier: 'tier1',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8094/health',
    description: 'Primary AI engine with vector search and generation',
    startupOrder: 1
  },
  'upload-service': {
    name: 'File Upload Service',
    binary: 'upload-service.exe',
    port: 8093,
    protocols: ['http'],
    tier: 'tier1',
    category: 'file_upload',
    healthEndpoint: 'http://localhost:8093/health',
    description: 'Primary file processing and metadata extraction',
    startupOrder: 2
  },
  'grpc-server': {
    name: 'gRPC Server',
    binary: 'grpc-server.exe',
    port: 50051,
    protocols: ['grpc'],
    tier: 'tier1',
    category: 'protocol',
    healthEndpoint: 'http://localhost:50051/health',
    description: 'High-performance gRPC protocol layer',
    startupOrder: 3
  },

  // TIER 2: Enhanced Services (Performance Layer)
  'rag-quic-proxy': {
    name: 'RAG QUIC Proxy',
    binary: 'rag-quic-proxy.exe',
    port: 8216,
    protocols: ['quic'],
    tier: 'tier2',
    category: 'protocol',
    healthEndpoint: 'http://localhost:8216/health',
    description: 'Ultra-fast QUIC protocol for RAG queries',
    dependencies: ['enhanced-rag'],
    startupOrder: 4
  },
  'ai-enhanced': {
    name: 'AI Summary Service',
    binary: 'ai-enhanced.exe',
    port: 8096,
    protocols: ['http'],
    tier: 'tier2',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8096/health',
    description: 'AI document summarization and analysis',
    startupOrder: 5
  },
  'cluster-http': {
    name: 'Cluster Manager',
    binary: 'cluster-http.exe',
    port: 8213,
    protocols: ['http'],
    tier: 'tier2',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8213/health',
    description: 'HTTP cluster coordination and management',
    startupOrder: 6
  },

  // TIER 3: Specialized Services (Feature Layer)
  'live-agent-enhanced': {
    name: 'Live AI Agent',
    binary: 'live-agent-enhanced.exe',
    port: 8200,
    protocols: ['http', 'websocket'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8200/health',
    description: 'Real-time AI agent with WebSocket support',
    dependencies: ['enhanced-rag'],
    startupOrder: 7
  },
  'enhanced-legal-ai': {
    name: 'Legal AI Processor',
    binary: 'enhanced-legal-ai.exe',
    port: 8202,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8202/health',
    description: 'Specialized legal document processing',
    startupOrder: 8
  },
  'xstate-manager': {
    name: 'XState Manager',
    binary: 'xstate-manager.exe',
    port: 8212,
    protocols: ['http'],
    tier: 'tier3',
    category: 'xstate_orchestration',
    healthEndpoint: 'http://localhost:8212/health',
    description: 'State machine coordination and events',
    startupOrder: 9
  },

  // TIER 4: Infrastructure Services (Support Layer)
  'load-balancer': {
    name: 'Load Balancer',
    binary: 'load-balancer.exe',
    port: 8222,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8222/health',
    description: 'Traffic distribution and service balancing',
    startupOrder: 10
  },
  'gpu-indexer-service': {
    name: 'GPU Indexer',
    binary: 'gpu-indexer-service.exe',
    port: 8220,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8220/health',
    description: 'GPU-powered document indexing',
    startupOrder: 11
  },

  // AI/RAG Extended Services
  'enhanced-rag-service': {
    name: 'Enhanced RAG Alternative',
    binary: 'enhanced-rag-service.exe',
    port: 8195,
    protocols: ['http'],
    tier: 'tier2',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8195/health',
    description: 'Alternative RAG implementation',
    startupOrder: 12
  },
  'ai-enhanced-final': {
    name: 'AI Enhanced Final',
    binary: 'ai-enhanced-final.exe',
    port: 8097,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8097/health',
    description: 'Finalized AI processing pipeline',
    startupOrder: 13
  },
  'ai-enhanced-fixed': {
    name: 'AI Enhanced Fixed',
    binary: 'ai-enhanced-fixed.exe',
    port: 8098,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8098/health',
    description: 'AI service with bug fixes',
    startupOrder: 14
  },
  'ai-enhanced-postgresql': {
    name: 'AI PostgreSQL Integration',
    binary: 'ai-enhanced-postgresql.exe',
    port: 8099,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8099/health',
    description: 'AI service with PostgreSQL integration',
    startupOrder: 15
  },
  'enhanced-semantic-architecture': {
    name: 'Semantic Architecture',
    binary: 'enhanced-semantic-architecture.exe',
    port: 8201,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8201/health',
    description: 'Semantic analysis and architecture',
    startupOrder: 16
  },
  'enhanced-legal-ai-clean': {
    name: 'Legal AI Clean',
    binary: 'enhanced-legal-ai-clean.exe',
    port: 8203,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8203/health',
    description: 'Optimized legal AI processing',
    startupOrder: 17
  },
  'enhanced-legal-ai-fixed': {
    name: 'Legal AI Fixed',
    binary: 'enhanced-legal-ai-fixed.exe',
    port: 8204,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8204/health',
    description: 'Legal AI with patches applied',
    startupOrder: 18
  },
  'enhanced-legal-ai-redis': {
    name: 'Legal AI Redis',
    binary: 'enhanced-legal-ai-redis.exe',
    port: 8205,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8205/health',
    description: 'Legal AI with Redis caching',
    startupOrder: 19
  },
  'enhanced-multicore': {
    name: 'Multi-core AI Processing',
    binary: 'enhanced-multicore.exe',
    port: 8206,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8206/health',
    description: 'Multi-core AI processing engine',
    startupOrder: 20
  },

  // File & Upload Services
  'gin-upload': {
    name: 'Gin Upload Handler',
    binary: 'gin-upload.exe',
    port: 8207,
    protocols: ['http'],
    tier: 'tier2',
    category: 'file_upload',
    healthEndpoint: 'http://localhost:8207/health',
    description: 'Gin-based file upload handler',
    startupOrder: 21
  },
  'simple-upload': {
    name: 'Simple Upload Service',
    binary: 'simple-upload.exe',
    port: 8208,
    protocols: ['http'],
    tier: 'tier2',
    category: 'file_upload',
    healthEndpoint: 'http://localhost:8208/health',
    description: 'Lightweight upload service',
    startupOrder: 22
  },
  'summarizer-service': {
    name: 'Document Summarizer',
    binary: 'summarizer-service.exe',
    port: 8209,
    protocols: ['http'],
    tier: 'tier3',
    category: 'file_upload',
    healthEndpoint: 'http://localhost:8209/health',
    description: 'Document summarization service',
    startupOrder: 23
  },
  'summarizer-http': {
    name: 'HTTP Summarizer',
    binary: 'summarizer-http.exe',
    port: 8210,
    protocols: ['http'],
    tier: 'tier3',
    category: 'file_upload',
    healthEndpoint: 'http://localhost:8210/health',
    description: 'HTTP-based document summarizer',
    startupOrder: 24
  },
  'ai-summary': {
    name: 'AI Summary Service',
    binary: 'ai-summary.exe',
    port: 8211,
    protocols: ['http'],
    tier: 'tier3',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8211/health',
    description: 'AI-powered document summaries',
    startupOrder: 25
  },

  // XState & Orchestration
  'modular-cluster-service': {
    name: 'Modular Cluster Service',
    binary: 'modular-cluster-service.exe',
    port: 8214,
    protocols: ['http'],
    tier: 'tier2',
    category: 'xstate_orchestration',
    healthEndpoint: 'http://localhost:8214/health',
    description: 'Modular cluster service management',
    startupOrder: 26
  },
  'modular-cluster-service-production': {
    name: 'Production Cluster Service',
    binary: 'modular-cluster-service-production.exe',
    port: 8215,
    protocols: ['http'],
    tier: 'tier2',
    category: 'xstate_orchestration',
    healthEndpoint: 'http://localhost:8215/health',
    description: 'Production-grade cluster service',
    startupOrder: 27
  },

  // Protocol Services
  'rag-kratos': {
    name: 'Kratos gRPC Service',
    binary: 'rag-kratos.exe',
    port: 50052,
    protocols: ['grpc'],
    tier: 'tier1',
    category: 'protocol',
    healthEndpoint: 'http://localhost:50052/health',
    description: 'Kratos-based gRPC service',
    startupOrder: 28
  },

  // Infrastructure Services
  'simd-health': {
    name: 'SIMD Health Monitor',
    binary: 'simd-health.exe',
    port: 8217,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8217/health',
    description: 'SIMD-optimized health monitoring',
    startupOrder: 29
  },
  'simd-parser': {
    name: 'SIMD Data Parser',
    binary: 'simd-parser.exe',
    port: 8218,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8218/health',
    description: 'SIMD data parsing and processing',
    startupOrder: 30
  },
  'context7-error-pipeline': {
    name: 'Context7 Error Pipeline',
    binary: 'context7-error-pipeline.exe',
    port: 8219,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8219/health',
    description: 'Error handling and remediation pipeline',
    startupOrder: 31
  },
  'async-indexer': {
    name: 'Async Indexer',
    binary: 'async-indexer.exe',
    port: 8221,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8221/health',
    description: 'Asynchronous document indexing',
    startupOrder: 32
  },
  'recommendation-service': {
    name: 'ML Recommendations',
    binary: 'recommendation-service.exe',
    port: 8223,
    protocols: ['http'],
    tier: 'tier4',
    category: 'ai_rag',
    healthEndpoint: 'http://localhost:8223/health',
    description: 'Machine learning recommendation engine',
    startupOrder: 33
  },

  // Development & Testing
  'simple-server': {
    name: 'Simple HTTP Server',
    binary: 'simple-server.exe',
    port: 8224,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8224/health',
    description: 'Simple HTTP server for testing',
    startupOrder: 34
  },
  'test-server': {
    name: 'Testing Server',
    binary: 'test-server.exe',
    port: 8225,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8225/health',
    description: 'Dedicated testing and validation server',
    startupOrder: 35
  },
  'test-build': {
    name: 'Build Testing Service',
    binary: 'test-build.exe',
    port: 8226,
    protocols: ['http'],
    tier: 'tier4',
    category: 'infrastructure',
    healthEndpoint: 'http://localhost:8226/health',
    description: 'Build testing and validation service',
    startupOrder: 36
  }
};

export const API_ROUTE_MAPPING = {
  // Core RAG & AI endpoints
  '/api/v1/rag/query': {
    services: ['enhanced-rag'],
    preferredProtocol: 'quic',
    fallback: ['grpc', 'http'],
    tier: PROTOCOL_TIERS.ULTRA_FAST
  },
  '/api/v1/rag/semantic': {
    services: ['enhanced-rag', 'enhanced-semantic-architecture'],
    preferredProtocol: 'grpc',
    fallback: ['http'],
    tier: PROTOCOL_TIERS.HIGH_PERF
  },
  '/api/v1/rag/embed': {
    services: ['enhanced-rag'],
    preferredProtocol: 'http',
    fallback: [],
    tier: PROTOCOL_TIERS.STANDARD
  },

  // Upload & File Processing
  '/api/v1/upload/file': {
    services: ['upload-service'],
    preferredProtocol: 'http',
    fallback: ['gin-upload', 'simple-upload'],
    tier: PROTOCOL_TIERS.STANDARD
  },
  '/api/v1/upload/batch': {
    services: ['upload-service', 'gin-upload'],
    preferredProtocol: 'http',
    fallback: [],
    tier: PROTOCOL_TIERS.STANDARD
  },
  '/api/v1/upload/metadata': {
    services: ['upload-service'],
    preferredProtocol: 'http',
    fallback: [],
    tier: PROTOCOL_TIERS.STANDARD
  },

  // AI Processing
  '/api/v1/ai/summary': {
    services: ['ai-enhanced', 'ai-summary'],
    preferredProtocol: 'grpc',
    fallback: ['http'],
    tier: PROTOCOL_TIERS.HIGH_PERF
  },
  '/api/v1/ai/legal/analyze': {
    services: ['enhanced-legal-ai', 'enhanced-legal-ai-clean', 'enhanced-legal-ai-fixed'],
    preferredProtocol: 'grpc',
    fallback: ['http'],
    tier: PROTOCOL_TIERS.HIGH_PERF
  },
  '/api/v1/ai/live/session': {
    services: ['live-agent-enhanced'],
    preferredProtocol: 'websocket',
    fallback: ['http'],
    tier: PROTOCOL_TIERS.REALTIME
  },

  // Cluster & Orchestration
  '/api/v1/cluster/health': {
    services: ['cluster-http', 'modular-cluster-service-production'],
    preferredProtocol: 'http',
    fallback: [],
    tier: PROTOCOL_TIERS.STANDARD
  },
  '/api/v1/cluster/services': {
    services: ['cluster-http'],
    preferredProtocol: 'http',
    fallback: [],
    tier: PROTOCOL_TIERS.STANDARD
  },
  '/api/v1/cluster/metrics': {
    services: ['cluster-http', 'simd-health'],
    preferredProtocol: 'http',
    fallback: [],
    tier: PROTOCOL_TIERS.STANDARD
  },

  // XState Management
  '/api/v1/xstate/events': {
    services: ['xstate-manager'],
    preferredProtocol: 'quic',
    fallback: ['http'],
    tier: PROTOCOL_TIERS.ULTRA_FAST
  },
  '/api/v1/xstate/state': {
    services: ['xstate-manager'],
    preferredProtocol: 'http',
    fallback: [],
    tier: PROTOCOL_TIERS.STANDARD
  }
};

export const EXTERNAL_SERVICES = {
  // Database Services
  postgresql: { host: 'localhost', port: 5432, protocol: 'tcp' },
  neo4j: { host: 'localhost', port: 7474, protocol: 'http' },
  redis: { host: 'localhost', port: 6379, protocol: 'tcp' },

  // Messaging Services
  nats_server: { host: 'localhost', port: 4222, protocol: 'tcp' },
  nats_websocket: { host: 'localhost', port: 4223, protocol: 'websocket' },
  nats_monitor: { host: 'localhost', port: 8222, protocol: 'http' },

  // AI/ML Services
  ollama_primary: { host: 'localhost', port: 11434, protocol: 'http' },
  ollama_secondary: { host: 'localhost', port: 11435, protocol: 'http' },
  ollama_embeddings: { host: 'localhost', port: 11436, protocol: 'http' },

  // Storage Services
  minio: { host: 'localhost', port: 9000, protocol: 'http' },
  minio_console: { host: 'localhost', port: 9001, protocol: 'http' },
  qdrant: { host: 'localhost', port: 6333, protocol: 'http' }
};

export class ProductionServiceRegistry {
  private services: Map<string, ServiceDefinition> = new Map();
  private healthCache: Map<string, { status: boolean; lastCheck: number }> = new Map();
  private readonly HEALTH_CACHE_TTL = 30000; // 30 seconds

  constructor() {
    // Initialize registry with all Go services
    Object.entries(GO_SERVICES_REGISTRY).forEach(([key, service]) => {
      this.services.set(key, service);
    });
  }

  getServiceByName(name: string): ServiceDefinition | undefined {
    return this.services.get(name);
  }

  getServicesByCategory(category: ServiceDefinition['category']): ServiceDefinition[] {
    return Array.from(this.services.values()).filter(service => service.category === category);
  }

  getServicesByTier(tier: ServiceDefinition['tier']): ServiceDefinition[] {
    return Array.from(this.services.values())
      .filter(service => service.tier === tier)
      .sort((a, b) => a.startupOrder - b.startupOrder);
  }

  getStartupOrder(): ServiceDefinition[] {
    return Array.from(this.services.values())
      .sort((a, b) => a.startupOrder - b.startupOrder);
  }

  getServiceForRoute(route: string): { 
    primary: ServiceDefinition; 
    fallbacks: ServiceDefinition[]; 
    protocol: ProtocolTierConfig;
  } | null {
    const mapping = API_ROUTE_MAPPING[route];
    if (!mapping) return null;

    const primary = this.services.get(mapping.services[0]);
    if (!primary) return null;

    const fallbacks = mapping.fallback
      ?.map(serviceName => this.services.get(serviceName))
      .filter(Boolean) as ServiceDefinition[] || [];

    return {
      primary,
      fallbacks,
      protocol: mapping.tier
    };
  }

  async checkServiceHealth(serviceName: string): Promise<boolean> {
    const service = this.services.get(serviceName);
    if (!service) return false;

    const cached = this.healthCache.get(serviceName);
    if (cached && (Date.now() - cached.lastCheck) < this.HEALTH_CACHE_TTL) {
      return cached.status;
    }

    try {
      const response = await fetch(service.healthEndpoint, { 
        method: 'GET',
        signal: AbortSignal.timeout(5000)
      });
      const healthy = response.ok;
      
      this.healthCache.set(serviceName, {
        status: healthy,
        lastCheck: Date.now()
      });
      
      return healthy;
    } catch {
      this.healthCache.set(serviceName, {
        status: false,
        lastCheck: Date.now()
      });
      return false;
    }
  }

  async getClusterHealth(): Promise<{
    overall: 'healthy' | 'degraded' | 'critical';
    services: Record<string, boolean>;
    tiers: Record<string, { healthy: number; total: number }>;
  }> {
    const healthChecks = await Promise.all(
      Array.from(this.services.keys()).map(async (serviceName) => [
        serviceName,
        await this.checkServiceHealth(serviceName)
      ])
    );

    const serviceHealth = Object.fromEntries(healthChecks);
    const healthyCount = Object.values(serviceHealth).filter(Boolean).length;
    const totalCount = Object.keys(serviceHealth).length;

    // Calculate tier health
    const tierHealth = {} as Record<string, { healthy: number; total: number }>;
    ['tier1', 'tier2', 'tier3', 'tier4'].forEach(tier => {
      const tierServices = this.getServicesByTier(tier as any);
      const tierHealthy = tierServices.filter(service => serviceHealth[service.name]).length;
      tierHealth[tier] = { healthy: tierHealthy, total: tierServices.length };
    });

    let overall: 'healthy' | 'degraded' | 'critical';
    if (healthyCount === totalCount) overall = 'healthy';
    else if (healthyCount >= totalCount * 0.8) overall = 'degraded';
    else overall = 'critical';

    return { overall, services: serviceHealth, tiers: tierHealth };
  }

  generateViteProxyConfig(): Record<string, string> {
    const proxyConfig: Record<string, string> = {};
    
    Object.entries(API_ROUTE_MAPPING).forEach(([route, mapping]) => {
      const service = this.services.get(mapping.services[0]);
      if (service) {
        const protocol = mapping.preferredProtocol === 'quic' ? 'http' : 'http'; // QUIC fallback to HTTP for Vite
        proxyConfig[route] = `${protocol}://localhost:${service.port}`;
      }
    });

    // Add external services
    proxyConfig['/api/ollama'] = 'http://localhost:11434';
    proxyConfig['/api/neo4j'] = 'http://localhost:7474';
    proxyConfig['/api/minio'] = 'http://localhost:9000';
    proxyConfig['/api/qdrant'] = 'http://localhost:6333';

    return proxyConfig;
  }
}

// Context7 Multicore Integration
export interface Context7MulticoreConfig {
  errorCategories: {
    svelte5_migration: { count: number; priority: 'critical' };
    ui_component_mismatch: { count: number; priority: 'high' };
    css_unused_selectors: { count: number; priority: 'medium' };
    binding_issues: { count: number; priority: 'high' };
  };
  gpuOptimization: {
    enabled: boolean;
    rtx3060ti: boolean;
    flashAttention2: boolean;
    contexts: number;
  };
  orchestration: {
    nodeJSOrchestrator: boolean;
    mcpIntegration: boolean;
    workerCount: number;
    maxConcurrentTasks: number;
  };
}

export const CONTEXT7_MULTICORE_CONFIG: Context7MulticoreConfig = {
  errorCategories: {
    svelte5_migration: { count: 800, priority: 'critical' },
    ui_component_mismatch: { count: 600, priority: 'high' },
    css_unused_selectors: { count: 400, priority: 'medium' },
    binding_issues: { count: 162, priority: 'high' }
  },
  gpuOptimization: {
    enabled: true,
    rtx3060ti: true,
    flashAttention2: true,
    contexts: 16
  },
  orchestration: {
    nodeJSOrchestrator: true,
    mcpIntegration: true,
    workerCount: 16,
    maxConcurrentTasks: 20
  }
};

// Export singleton instance
export const productionServiceRegistry = new ProductionServiceRegistry();

// Export service utilities
export function getServiceUrl(serviceName: string, protocol: 'http' | 'grpc' | 'quic' | 'websocket' = 'http'): string {
  const service = productionServiceRegistry.getServiceByName(serviceName);
  if (!service) throw new Error(`Service not found: ${serviceName}`);

  const protocolMap = {
    http: 'http',
    grpc: 'grpc',
    quic: 'quic',
    websocket: 'ws'
  };

  return `${protocolMap[protocol]}://localhost:${service.port}`;
}

export function getOptimalServiceForRoute(route: string): {
  url: string;
  protocol: string;
  service: ServiceDefinition;
} | null {
  const mapping = productionServiceRegistry.getServiceForRoute(route);
  if (!mapping) return null;

  return {
    url: getServiceUrl(mapping.primary.name, mapping.protocol.protocol as any),
    protocol: mapping.protocol.protocol,
    service: mapping.primary
  };
}